--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@material-tailwind/react": "^2.1.10",
-    "i18next": "^25.0.0",
-    "i18next-browser-languagedetector": "^8.0.4",
+    "lucide-react": "^0.525.0",
     "motion": "^12.12.1",
+    "notyf": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.1",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5"
   }
